--- a/composer.json
+++ b/composer.json
@@ -2,20 +2,22 @@
     "name": "riimu/kit-securerandom",
     "type": "library",
     "description": "Library for leveraging available secure random generators.",
-    "keywords": ["security", "random"],
+    "homepage": "http://kit.riimu.net",
+    "keywords": ["secure", "random", "generator"],
     "license": "MIT",
     "authors": [
         {
             "name": "Riikka Kalliomäki",
             "email": "riikka.kalliomaki@gmail.com",
-            "homepage": "http://riimu.net",
-            "role": "Developer"
+            "homepage": "http://riimu.net"
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "ext-openssl": "*",
-        "ext-mcrypt" : "*"
+        "php": ">=5.4.0"
+    },
+    "suggest": {
+        "ext-openssl": "To use the OpenSSL secure random byte generator",
+        "ext-mcrypt": "To use the Mcrypt secure random byte generator"
     },
     "autoload": {
         "psr-4": {
