--- a/apigen.neon
+++ b/apigen.neon
@@ -5,6 +5,7 @@ destination: api
 charset:
 	- UTF-8
 
-main: Riimu\Kit\SecureRandom
-title: SecureRandom
+main: Riimu\Kit\CSRF
+title: CSRF
 php: false
+tree: true
