--- a/apigen.neon
+++ b/apigen.neon
@@ -5,7 +5,7 @@ destination: api
 charset:
 	- UTF-8
 
-main: Riimu\Kit\CSRF
-title: CSRF
+main: Riimu\Kit\SecureRandom
+title: SecureRandom
 php: false
 tree: true
