--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,12 @@
+# Make sure line endings are normalized to LF for Windows
+* text eol=lf
+
+# Remove developer files from exports
+tests export-ignore
+.coveralls.yml export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
+.php_cs export-ignore
 .travis.yml export-ignore
-.coveralls.yml export-ignore
 apigen.neon export-ignore
 phpunit.xml export-ignore
-tests export-ignore
