--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ php:
   - 5.6
   - 5.5
   - 5.4
+  - 7.0
+  - hhvm
 
 cache:
   directories:
@@ -14,14 +16,17 @@ before_install:
   - composer self-update
 
 install:
-  - composer require --no-update --no-interaction "phpunit/phpunit:4.*" "squizlabs/php_codesniffer:2.*" "fabpot/php-cs-fixer:1.*"
-  - travis_retry composer install --no-interaction
+  - composer require --no-update --no-interaction "phpunit/phpunit:*" "squizlabs/php_codesniffer:*" "fabpot/php-cs-fixer:*"
+  - travis_retry composer update --no-interaction --prefer-source
   - travis_retry wget https://scrutinizer-ci.com/ocular.phar
 
+before_script:
+  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then export TEST_BIN="phpdbg"; else export TEST_BIN="php"; fi
+
 script:
-  - vendor/bin/phpunit --coverage-clover=coverage.clover
+  - "$TEST_BIN" vendor/phpunit/phpunit/phpunit --coverage-clover=coverage.clover;
   - vendor/bin/phpcs --standard=PSR2 src tests
   - vendor/bin/php-cs-fixer fix --dry-run --diff
 
 after_script:
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+  - if [ -f coverage.clover ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
