--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,11 @@ install:
   - travis_retry composer update --no-interaction --prefer-source
   - travis_retry wget https://scrutinizer-ci.com/ocular.phar
 
+before_script:
+  - if [[ $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then echo 'xdebug.enable = On' >> /etc/hhvm/php.ini; fi
+
 script:
-  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.0" ]]; then
+  - if [[ $TRAVIS_PHP_VERSION =~ ^7 ]]; then
       phpdbg -qrr vendor/phpunit/phpunit/phpunit --coverage-clover=coverage.clover;
     else
       vendor/bin/phpunit --coverage-clover=coverage.clover;
