--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,6 @@ script:
   - vendor/bin/php-cs-fixer fix --dry-run --diff
 
 after_script:
-  - if [ -f coverage.clover ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
+  - if [[ ! $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then
+      php ocular.phar code-coverage:upload --format=php-clover coverage.clover;
+    fi
