Disable xdebug on php 7 build

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ cache:
   - vendor
 
 before_install:
+  - if [[ $TRAVIS_PHP_VERSION =~ ^7 ]]; then phpenv config-rm xdebug.ini; fi
   - composer self-update
 
 install:
