--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,8 @@ before_script:
   - if [[ $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then echo 'xdebug.enable = On' >> /etc/hhvm/php.ini; fi
 
 script:
-  - if [[ $TRAVIS_PHP_VERSION =~ ^7 ]]; then
+  - >
+    if [[ $TRAVIS_PHP_VERSION =~ ^7 ]]; then
       phpdbg -qrr vendor/phpunit/phpunit/phpunit --coverage-clover=coverage.clover --coverage-text;
     else
       vendor/bin/phpunit --coverage-clover=coverage.clover --coverage-text;
@@ -34,6 +35,7 @@ script:
   - vendor/bin/php-cs-fixer fix --dry-run --diff
 
 after_script:
-  - if [[ ! $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then
+  - >
+    if [[ ! $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then
       php ocular.phar code-coverage:upload --format=php-clover coverage.clover;
     fi
