--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,31 @@
 language: php
 sudo: false
+dist: trusty
 
 php:
   - 5.6
-  - 5.5
-  - 5.4
   - 7.0
+  - 7.1
   - hhvm
 
 cache:
   directories:
-  - vendor
+    - vendor
 
 before_install:
-  - if [[ $TRAVIS_PHP_VERSION =~ ^7 ]]; then phpenv config-rm xdebug.ini; fi
-  - composer self-update
+  - export XDEBUG="/home/travis/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini"
+  - is_hhvm () { [[ $TRAVIS_PHP_VERSION =~ ^hhvm ]]; }
+  - is_hhvm || mv -v "$XDEBUG" "$XDEBUG.disabled"
 
 install:
-  - composer require --no-update --no-interaction "phpunit/phpunit:*" "squizlabs/php_codesniffer:*" "fabpot/php-cs-fixer:*"
-  - travis_retry composer update --no-interaction --prefer-source
+  - travis_retry composer update -a --no-interaction
   - travis_retry wget https://scrutinizer-ci.com/ocular.phar
 
-before_script:
-  - if [[ $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then echo 'xdebug.enable = On' >> /etc/hhvm/php.ini; fi
-
 script:
-  - >
-    if [[ $TRAVIS_PHP_VERSION =~ ^7 ]]; then
-      phpdbg -qrr vendor/phpunit/phpunit/phpunit --coverage-clover=coverage.clover --coverage-text;
-    else
-      vendor/bin/phpunit --coverage-clover=coverage.clover --coverage-text;
-    fi
   - vendor/bin/phpcs --standard=PSR2 src tests
-  - vendor/bin/php-cs-fixer fix --dry-run --diff
+  - vendor/bin/php-cs-fixer fix -v --dry-run --allow-risky=yes --using-cache=no
+  - if is_hhvm; then echo "xdebug.enable = On" >> /etc/hhvm/php.ini; else mv -v "$XDEBUG.disabled" "$XDEBUG"; fi
+  - vendor/bin/phpunit --coverage-clover=coverage.clover --coverage-text
 
 after_script:
-  - >
-    if [[ ! $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then
-      php ocular.phar code-coverage:upload --format=php-clover coverage.clover;
-    fi
+  - is_hhvm || php ocular.phar code-coverage:upload --format=php-clover coverage.clover
