--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,41 @@
 {
-    "name": "riimu/kit-securerandom",
-    "type": "library",
-    "description": "Library for leveraging available secure random generators",
-    "homepage": "http://kit.riimu.net",
-    "keywords": ["secure", "random", "generator"],
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Riikka Kalliomäki",
-            "email": "riikka.kalliomaki@gmail.com",
-            "homepage": "http://riimu.net"
-        }
-    ],
-    "require": {
-        "php": ">=5.4.0"
-    },
-    "suggest": {
-        "ext-openssl": "To use the OpenSSL secure random byte generator",
-        "ext-mcrypt": "To use the Mcrypt secure random byte generator"
-    },
-    "autoload": {
-        "psr-4": {
-            "Riimu\\Kit\\SecureRandom\\": "src/"
-        }
+  "name": "riimu/kit-securerandom",
+  "type": "library",
+  "description": "Library for leveraging available secure random generators",
+  "homepage": "http://kit.riimu.net",
+  "keywords": [
+    "secure",
+    "random",
+    "generator"
+  ],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Riikka Kalliomäki",
+      "email": "riikka.kalliomaki@gmail.com",
+      "homepage": "http://riimu.net"
     }
+  ],
+  "require": {
+    "php": ">=5.6.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.7 || ^6.2",
+    "squizlabs/php_codesniffer": "^3.0",
+    "friendsofphp/php-cs-fixer": "^2.3"
+  },
+  "suggest": {
+    "ext-openssl": "To use the OpenSSL secure random byte generator",
+    "ext-mcrypt": "To use the Mcrypt secure random byte generator"
+  },
+  "autoload": {
+    "psr-4": {
+      "Riimu\\Kit\\SecureRandom\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Riimu\\Kit\\SecureRandom\\": "tests/tests/"
+    }
+  }
 }
