--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
   "require": {
     "php": ">=5.6.0"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^6.3 || ^5.7"
+  },
   "suggest": {
     "ext-openssl": "To use the OpenSSL secure random byte generator",
     "ext-mcrypt": "To use the Mcrypt secure random byte generator"
